--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div>
-			<p> Hello, this is a test website. I hope this works!!</p>
+			<p class="large"> Hello, this is a test website. I hope this works!!</p>
 		</div>
 	</body>
 </html>
