--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Test website</title>
+		<link rel="stylesheet" href="style.css" type="text/css">
 	</head>
 	<body>
 		<div>
