--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 	<head>
 		<title>Test website</title>
 		<link rel="stylesheet" href="style.css" type="text/css">
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
+		<script src="scripts.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<div>
-			<p class="large"> Hello, this is a test website. I hope this works!!</p>
+		<div class="site-wrapper">	
+			<div class="wrapper">
+				<div class="large-text">Welcome to this test page </div>
+				<button class="btn btn-default" onclick="addHello()">Click Me!</button>
+			</div>
 		</div>
 	</body>
 </html>
