--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Test website</title>
+		<title>elvinchen.com</title>
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:500|Roboto" rel="stylesheet">
+		<script src="script.js"></script>
 		<link rel="stylesheet" href="style.css" type="text/css">
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto">
-		<script src="scripts.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<div class="site-wrapper">	
-			<div class="wrapper">
-				<div class="large-text">Elvin's Github page!</div>
+		<div class="tableContainer">
+			<div class="cellContainer">
+				<div class="innerContainer">
+					<div class="title">	
+						Elvin's page
+					</div>
+					Hosted on github
+					</div>
 			</div>
 		</div>
+
+
+		<!-- particles.js container -->
+		<div id="particles-js"></div>
+
+		<!-- scripts -->
+		<script src="particles.min.js"></script>
+		<script src="particleSettings.js"></script>
 	</body>
 </html>
