--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>elvinchen.com</title>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:500|Roboto" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="script.js"></script>
 		<link rel="stylesheet" href="style.css" type="text/css">
 	</head>
