minor css tweaks

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<div class="title">	
 						Elvin's page
 					</div>
-					Hosted on github
+					<div class="text">Hosted on Github Pages</div>
 					</div>
 			</div>
 		</div>
