--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<div class="text" style="font-weight: bold;">Things to check out:</div>
 					<div class="text"><a href="https://github.com/ElvinC">Github profile</a></div>
 					<div class="text"><a href="https://elvinchen.com/liftoff/"> Liftoff - Minimalistic launch and orbital dynamics simulator</a></div>
-					<div class="text"><a href="https://elvinchen.com/liftoff/"> Planesim - Awful flight simulator</a></div>
+					<div class="text"><a href="https://elvinchen.com/planesim/templates/"> Planesim - Awful flight simulator</a></div>
 					<div class="text"><a href="https://elvinchen.com/microcentury/"> Microcentury - Visualization of random time units</a></div>
 					</div>
 			</div>
