--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 			<div class="cellContainer">
 				<div class="innerContainer">
 					<div class="title">	
-						Elvin's page
+						Elvin Chen
 					</div>
+					<div class="text" style="">Aerospace engineering student</div> <br>
 					<hr>
 					<div class="text" style="font-weight: bold;">Things to check out:</div>
 					<div class="text"><a href="https://github.com/ElvinC">Github profile</a></div>
+					<div class="text"><a href="http://gyroflow.xyz/"> Gyroflow - Fancy gyro-assisted video stabilization</a></div>
 					<div class="text"><a href="https://elvinchen.com/liftoff/"> Liftoff - Minimalistic launch and orbital dynamics simulator</a></div>
 					<div class="text"><a href="https://elvinchen.com/planesim/templates/"> Planesim - Awful flight simulator</a></div>
 					<div class="text"><a href="https://elvinchen.com/microcentury/"> Microcentury - Visualization of random time units</a></div>
